Remove ramda dependency

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>Aludel Test App</title>
+        <link rel="stylesheet" type="text/css" href="./styles.css"></link>
     </head>
     <body>
+        <div class="app"></div>
         <script src='./app.ts'></script>
     </body>
 </html>
