Flesh out app example

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div class="app"></div>
-        <script src='./app.ts'></script>
+        <script src='./main.ts'></script>
     </body>
 </html>
