--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,7 @@
 <htmL>
     <head>
         <title>Aludel Demo App</title>
+         <link rel="stylesheet" type="text/css" href="./styles.css"></link>
     </head>
     <body>
         <div class="app"></div>
